--- a/adapt_index.html
+++ b/adapt_index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <!-- Theese informations will be shown in the tab preview and in social media preview -->
-    <title>XXX Add your title</title>
+    <title>Biophysicists on Mastodon</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <!-- Metatags for facebook, google etc. -->
-    <meta property="og:title" content="XXX Add your title" />
+    <meta property="og:title" content="Biophysicists on Mastodon" />
     <meta
       property="og:description"
-      content="XXX Add a brief Description"
+      content="get in touch with astrophysicists from around the world on Mastodon at the Fediverse"
     />
     <meta
       property="og:image"
@@ -58,7 +58,18 @@
     <h2>XXX Add subtitle or delete line</h2>
     <!-- Description paragraph -->
     <p>
-        XXX Add your description of your page for the users. What does this page offer? How does it work?
+  You want to get in touch with niophysicists from around the world on
+        <a
+          href="https://en.wikipedia.org/wiki/Mastodon_(software)"
+          target="_blank"
+          >Mastodon</a
+        >? This page lists accounts from biophysicists
+        and offers an easy method to follow multiple accounts at
+        once. Just decide if you want to follow all or only some of the accounts
+        listed below. You are provided with a .csv-file, which you can upload in
+        Mastodon in order to follow all accounts included.
+        <a href="instructions.pdf" target="_blank">Here</a> you can find a
+        short instruction page on how to do this.      
     </p>
 
     <!-- Buttons - do not change -->
@@ -81,7 +92,10 @@
 
       <!-- further information and contact-->
       <p>
-        XXX Add further information, f.i. how you gather your data and whom to contact.
+        Full names are only included if they are shown in the profile or on
+        explicit demand. You want to be on the list, too? Please use this <a href="add-user.html" target="_blank">form</a> (preferred)
+        or contact me under
+        <a href="https://scicomm.xyz/web/@jocelyn_etienne" target="_blank">@scicomm.xyz@jocelyn_etienne</a>.
       </p>
 
       <!-- ruler that seperates the footer -->
@@ -90,7 +104,9 @@
       <!-- footer -->
       <footer>
         <p>
-          XXX Include your footer informations here.
+          You are interested in sociological content on mastodon, but you don’t
+        want to be added to the list? Then you could consider following the group
+        <a href="https://a.gup.pe/u/mechanobiology" target="_blank">@mechanobiology@a.gup.pe</a>.
         </p>
 
         <!-- Suggested reference to the webaps main repository. Please feel free to adapt to your needs based on the licens specified here "https://github.com/trutzig89182/Mastodon-Sociologists"-->
