--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Biophysicists on Mastodon" />
     <meta
       property="og:description"
-      content="get in touch with astrophysicists from around the world on Mastodon at the Fediverse"
+      content="get in touch with biophysicists from around the world on Mastodon in the Fediverse"
     />
     <meta
       property="og:image"
@@ -53,12 +53,12 @@
       >⇽ more lists from other disciplines</a
     >
     <!-- Page title -->
-    <h1>XXX Add page title</h1>
+    <h1>Biophysicists on Mastodon</h1>
     <!-- Subtitle -->
-    <h2>XXX Add subtitle or delete line</h2>
+    <h2>Follow all your favourite biophysicists</h2>
     <!-- Description paragraph -->
     <p>
-  You want to get in touch with niophysicists from around the world on
+  You want to get in touch with biophysicists from around the world on
         <a
           href="https://en.wikipedia.org/wiki/Mastodon_(software)"
           target="_blank"
