--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         Full names are only included if they are shown in the profile or on
         explicit demand. You want to be on the list, too? Please use this <a href="add-user.html" target="_blank">form</a> (preferred)
         or contact me under
-        <a href="https://scicomm.xyz/web/@jocelyn_etienne" target="_blank">@scicomm.xyz@jocelyn_etienne</a>.
+        <a href="https://scicomm.xyz/web/@jocelyn_etienne" target="_blank">@jocelyn_etienne@scicomm.xyz</a>.
       </p>
 
       <!-- ruler that seperates the footer -->
