--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       <!-- further information and contact-->
       <p>
         Full names are only included if they are shown in the profile or on
-        explicit demand. You want to be on the list, too? Please use this <a href="add-user.html" target="_blank">form</a> (preferred)
-        or contact me under
+        explicit demand. You want to be on the list, too? Please use this <a href="https://framaforms.org/biophysicists-on-mastodon-1667920373" target="_blank">form</a>.
+        In case of difficulties, you can contact me at
         <a href="https://scicomm.xyz/web/@jocelyn_etienne" target="_blank">@jocelyn_etienne@scicomm.xyz</a>.
       </p>
 
