--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <form id="main-form" method="get" action="#">
         <fieldset>
           <legend>
-            Accounts by handle, name, and keywords (most recent first)
+            Accounts by handle, name, and keywords
           </legend>
           <div id="user-list"></div>
           <button type="button" id="generate-csv">Get CSV for selected accounts</button>
@@ -95,9 +95,9 @@
 
       <!-- further information and contact-->
       <p>
-        Full names are only included if they are shown in the profile or on
-        explicit demand. You want to be on the list, too? Please use this <a href="https://framaforms.org/biophysicists-on-mastodon-1667920373" target="_blank">form</a>.
-        In case of difficulties, you can contact me at
+        You want to be on the list, too? Please use this <a href="https://framaforms.org/biophysicists-on-mastodon-1667920373" target="_blank">form</a>.
+        <BR>Full names and/or don't have to be included, just leave blank if you prefer.
+        In case of difficulty, you can contact me at
         <a href="https://scicomm.xyz/web/@jocelyn_etienne" target="_blank">@jocelyn_etienne@scicomm.xyz</a>.
       </p>
 
