--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <!-- further information and contact-->
       <p>
         You want to be on the list, too? Please use this <a href="https://framaforms.org/biophysicists-on-mastodon-1667920373" target="_blank">form</a>.
-        <BR>Full names and/or don't have to be included, just leave blank if you prefer.
+        <BR>Full names and/or affiliations don't have to be included, just leave blank if you prefer.
         In case of difficulty, you can contact me at
         <a href="https://scicomm.xyz/web/@jocelyn_etienne" target="_blank">@jocelyn_etienne@scicomm.xyz</a>.
       </p>
